Added timer, introduced var, minor code improvements