@@ -5,22 +5,17 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class Transformations implements Iterable<Transformation> {
+public record Transformations(List<Transformation> transformations) implements Iterable<Transformation> {
     public static final String SPLIT_ELEMENT = " => ";
 
-    private final List<Transformation> transformations;
-
-    private Transformations(List<Transformation> list) {
-        this.transformations = list;
-    }
-
-    public static Transformations fromList(List<String> list) {
+    public static Transformations of(List<String> list) {
         final List<Transformation> transformations = list.stream()
-                .filter(text -> text.trim().length() > 0)
+                .map(String::trim)
+                .filter(text -> !text.isEmpty())
                 .filter(text -> text.contains(SPLIT_ELEMENT))
                 .map(text -> text.split(SPLIT_ELEMENT))
                 .map(e -> new Transformation(e[0],e[1]))
-                .collect(Collectors.toList());
+                .toList();
 
         return new Transformations(transformations);
     }
@@ -40,10 +35,5 @@ public class Transformations implements Iterable<Transformation> {
     @Override
     public Iterator<Transformation> iterator() {
         return transformations.iterator();
-    }
-
-    @Override
-    public String toString() {
-        return transformations.toString();
     }
 }
